--- a/index.html
+++ b/index.html
@@ -12,30 +12,19 @@
     <div class="full-width header-wrapper">
       <header>
         <h1>Style Tile Template</h1>
-        <h2>Project name</h2>
-        <h3>Style tile</h3>
-        <h4>Version 1</h4>
       </header>
     </div>
 
     <main>
       <div class="column">
         <section class="swatches">
-          <h3 class="section-heading">Colour swatches</h3>
+          <h3 class="section-heading">Color swatches</h3>
           <ul class="swatchgrid">
             <li class="color-swatch-1"></li>
             <li class="color-swatch-2"></li>
             <li class="color-swatch-3"></li>
             <li class="color-swatch-4"></li>
             <li class="color-swatch-5"></li>
-          </ul>
-        </section>
-        <section class="textures">
-          <h3 class="section-heading">Textures</h3>
-          <ul class="swatchgrid">
-            <li class="texture-swatch-1"></li>
-            <li class="texture-swatch-2"></li>
-            <li class="texture-swatch-3"></li>
           </ul>
         </section>
         <section class="buttons">
@@ -53,13 +42,13 @@
           <h3 class="section-heading">Typography</h3>
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Open Sans</span>,
+            <span class="font-color">#d4a074</span>
           </p>
-          <h2 class="h2-sample">An example of a sub header</h2>
+          <h2 class="h2-sample">A subheader</h2>
           <p class="font-details-h2">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Open Sans</span>,
+            <span class="font-color">#ffffff</span>
           </p>
           <p class="typography-sample">
             This sample paragraph has <strong>strong parts</strong> and
@@ -70,8 +59,8 @@
             netus et malesuada fames ac turpis egestas.
           </p>
           <p class="font-details-p">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Roboto Slab</span>,
+            <span class="font-color">#ffffff</span>
           </p>
           <a href="#" class="typography-sample"
             >This is an example of a text link.</a
@@ -81,23 +70,12 @@
             <span class="font-color">#color value</span>
           </p>
         </section>
-        <section class="adjectives">
-          <h3 class="section-heading">Adjectives</h3>
-          <ul>
-            <li>Write</li>
-            <li>Your</li>
-            <li>adjectives</li>
-            <li>here</li>
-          </ul>
-        </section>
       </div>
       <!-- end .column -->
     </main>
 
     <div class="full-width">
-      <footer>
-        <p>Be creative - don't just use this template as is!</p>
-      </footer>
+      <footer></footer>
     </div>
   </body>
 </html>
